--- a/CsvReader/CsvReader.vcxproj.filters
+++ b/CsvReader/CsvReader.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="include\RDCsvReader.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\Mesh.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\RDCsvReader.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Mesh.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
